# model-explorer-open-asr

./: .env.aws  .env.example  .gitignore  ADDING_MODELS.md  Caddyfile  Dockerfile  README.md  deploy-aws.sh  docker-compose.aws.yml  docker-compose.scribe.yml  docker-compose.yml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: explore.agent.md  prime.agent.md
backend/: Dockerfile  Dockerfile.worker  app.py  patch_vllm_blackwell.py  requirements-worker.txt  requirements.txt  test_pytorch_baseline.py  test_vllm_direct.py  test_vllm_v0.py  worker.py
docs/: production-readiness-roadmap.md
docs/adr/: ADR-001-migrate-asr-inference-from-vllm-to-faster-whisper.md
docs/diagrams/: architecture-full-flow.excalidraw-mcp.json  architecture-layered.excalidraw-mcp.json  production-readiness-architecture.md
docs/model-survey-paper/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/scripts/: fetch_fleurs.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioRecorder.jsx  JobsList.jsx  MetricsDashboard.jsx  ModelSelector.jsx  SampleClips.jsx  StagedFiles.jsx  TranscriptDisplay.jsx
frontend/src/services/: inferenceRouter.js
frontend/src/workers/: webgpu.worker.js
frontend/tests/: app.spec.js
scribe/gateway/: Dockerfile  go.mod  main.go
scribe/normalizer/: Cargo.toml  Dockerfile
scribe/normalizer/src/: main.rs
scribe/proto/: scribe.proto
scribe/worker/: Dockerfile  batch_consumer.py  embedder.py  requirements.txt  scribe_server.py
(+1 files in other folders)
